--- a/public/src/css/header.css
+++ b/public/src/css/header.css
@@ -10,8 +10,8 @@
 
 /* ===== Colours ===== */
 :root {
-    --body-color: #bcccfb;
-    --nav-color: #4070f4;
+    --body-color: #ffffff;
+    --nav-color: #20798d;
     --side-nav: #010718;
     --text-color: #fff;
 }
@@ -21,25 +21,18 @@ body {
     background-color: var(--body-color);
 }
 
-body.dark {
-    --body-color: #18191a;
-    --nav-color: #242526;
-    --side-nav: #242526;
-}
 
 nav {
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     left: 0;
     height: 70px;
     width: 100%;
     background-color: var(--nav-color);
     z-index: 100;
+    border-bottom: 4px solid #226877;
 }
 
-body.dark nav {
-    border: 1px solid #393838;
-}
 
 nav .nav-bar {
     position: relative;
@@ -109,27 +102,6 @@ nav .nav-bar .logo a {
 .nav-links li:hover a::before {
     opacity: 1;
 }
-
-.nav-bar .darkLight-searchBox {
-    display: flex;
-    align-items: center;
-}
-
-.dark-light i.sun {
-    opacity: 0;
-    pointer-events: none;
-}
-
-.dark-light.active i.sun {
-    opacity: 1;
-    pointer-events: auto;
-}
-
-.dark-light.active i.moon {
-    opacity: 0;
-    pointer-events: none;
-}
-
 @media (max-width: 790px) {
     nav .nav-bar .sidebarOpen {
         display: block;
@@ -180,3 +152,4 @@ nav .nav-bar .logo a {
         margin-top: 20px;
     }
 }
+
