--- a/public/src/css/header.css
+++ b/public/src/css/header.css
@@ -1,6 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 /* ===== Google Font Import - Poppins ===== */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
@@ -157,3 +154,13 @@ nav .nav-bar .logo a {
     }
 }
 
+
+.model {
+    color: #000;
+    background-color: #eee;
+}
+
+.register-btn {
+    color: #fff;
+    background-color: #144d5a;
+}
