--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,67 +1,1 @@
-.heading {
-    color: #226877;
-}
-.search_bar {
-    background: #dce4fd;
-    border-color: #c2185b;
-    border-width: 2px;
-}
-.search_btn:focus-visible {
-    outline: 2px solid black;
-}
-.search_bar:focus {
-    outline: none;
-}
-.result {
-    background: #dce4fd;
-    color: #525353;
-}
-.result_heading {
-    color: #34383a;
-}
-
-.content-container {
-    display: grid;
-    place-items: center;
-    height: 100vh;
-}
-
-.msg-inputarea {
-    display: flex;
-    padding-left: 5vh;
-    padding-right: 5vh;
-    border-top: var(--border);
-    width: 96vw;
-    background: #fff;
-}
-
-.msg-inputarea * {
-    padding: 10px;
-    border: none;
-    border-radius: 3px;
-    font-size: 1em;
-}
-
-.msg-input {
-    flex: 1;
-    background: #e2e5e7;
-
-}
-
-.msg-input:focus {
-    outline: none;
-}
-
-.msg-send-btn {
-    margin-left: 10px;
-    background: #226877;
-    color: #fff;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background 0.23s;
-}
-
-.msg-send-btn:hover {
-    background: #22535e;
-}
-
+.heading{color:#226877}.search_bar{background:#dce4fd;border-color:#c2185b;border-width:2px}.search_btn:focus-visible{outline:2px solid #000}.search_bar:focus{outline:none}.result{background:#dce4fd;color:#525353}.result_heading{color:#34383a}.content-container{display:grid;height:100vh;place-items:center}.msg-inputarea{background:#fff;border-top:var(--border);display:flex;padding-left:5vh;padding-right:5vh;width:96vw}.msg-inputarea *{border:none;border-radius:3px;font-size:1em;padding:10px}.msg-input{background:#e2e5e7;flex:1}.msg-input:focus{outline:none}.msg-send-btn{background:#226877;color:#fff;cursor:pointer;font-weight:700;margin-left:10px;transition:background .23s}.msg-send-btn:hover{background:#22535e}
