--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,1 +1,16 @@
-.foot{background:#20798d;color:#4b5563}.foot .AD,.foot .dav,.foot .logo{color:#fff}
+.foot {
+    background: #20798d;
+    color: #4b5563;
+}
+
+.foot .logo {
+    color: #fff;
+}
+
+.foot .dav {
+    color: #fff;
+}
+
+.foot .AD {
+    color: #fff;
+}
