--- a/public/css/header.css
+++ b/public/css/header.css
@@ -77,16 +77,16 @@ nav .nav-bar .logo a {
     list-style: none;
 }
 
-.nav-links li a {
+.nav-links-a{
     position: relative;
     font-size: 17px;
     font-weight: 400;
-    color: var(--text-color);
+    /* color: var(--text-color); */
     text-decoration: none;
     padding: 10px;
 }
 
-.nav-links li a::before {
+.nav-links-a::before {
     content: "";
     position: absolute;
     left: 50%;
@@ -98,7 +98,7 @@ nav .nav-bar .logo a {
     background-color: var(--text-color);
     opacity: 0;
     transition: all 0.3s ease;
-}
+} 
 
 .nav-links li:hover a::before {
     opacity: 1;
@@ -163,4 +163,12 @@ nav .nav-bar .logo a {
 .register-btn {
     color: #fff;
     background-color: #144d5a;
+}
+
+.authentication_btn{
+    /* background-color: white; */
+    border: 2px solid #1c6d80;
+    background-color:#1c6d80;
+    border-radius: 10px;
+    color: white;
 }
